--- a/src/commonest/Layout/Smart_phone/body_smart_phone/style_body.scss
+++ b/src/commonest/Layout/Smart_phone/body_smart_phone/style_body.scss
@@ -2,7 +2,10 @@
   width: 1145px;
   height: auto;
   margin: 10px auto auto auto;
-  background: #f8f9fa;
+  background: white;
+}
+.Outstanding_tablet_center {
+  width: 100%;
 }
 .Home {
   color: blue;
@@ -11,11 +14,11 @@
 .banner {
   margin-top: 10px;
   width: 100%;
-  height: 200px;
+  height: auto;
 }
 .img_banner {
-  width: 1125px;
-  height: 200px;
+  width: 100%;
+  height: auto;
   padding-left: 45px;
 }
 .row_SmartPhone {
@@ -65,6 +68,7 @@
   line-height: 60px;
   margin-left: 18px;
 }
+
 ///
 .flex_product {
   margin-top: 20px;
@@ -74,19 +78,21 @@
   height: auto;
   border: 1px solid rgba(0, 0, 0, 0.125);
   border-bottom: none;
-  justify-content: space-between;
+
   border-radius: 9px;
 }
 .smart_phone {
   width: 33%;
   border-radius: 9px;
+  margin: 5px 0px 0px 2px;
   height: 450px;
   background: transparent;
   transition: 1s linear ease-in;
 }
 .smart_phone img {
-  width: 100%;
-  height: auto;
+  width: 175px;
+  height: 175px;
+  margin-left: 45px;
   transition: 0.4s ease-in-out;
 }
 .smart_phone:hover {
