--- a/src/commonest/Layout/default_Layout/Outstanding_phone/Outstanding_phone.scss
+++ b/src/commonest/Layout/default_Layout/Outstanding_phone/Outstanding_phone.scss
@@ -1,14 +1,14 @@
 .Outstanding_phone {
-  width: 1145px;
-  height: 825px;
+  width: 1160px;
+  height: auto;
   margin: 0 auto;
   background: white;
 }
-.Outstanding_laptop_center,
+.Outstanding_phone_center,
 .Outstanding_phone_product {
   margin: 20px 0 0 20px;
 }
-.Outstanding_laptop_center img {
+.Outstanding_phone_center img {
   width: 1145px;
   height: 200px;
 }
@@ -82,6 +82,7 @@
   line-height: 30px;
   margin: 0px 0px 0px 35px;
 }
+
 .img_Promotion_children:hover .buy_now {
   display: flex;
 }
