--- a/src/commonest/Layout/default_Layout/Table_sell/Tablet.scss
+++ b/src/commonest/Layout/default_Layout/Table_sell/Tablet.scss
@@ -1,6 +1,6 @@
 .Outstanding_Tablet {
-  width: 1145px;
-  height: 825px;
+  width: 1160px;
+  height: auto;
   margin: 0 auto;
   background: white;
 }
@@ -9,12 +9,12 @@
   margin: 20px 0 0 20px;
 }
 .Outstanding_tablet_center img {
-  width: 1145px;
-  height: 200px;
+  width: 100%;
+  height: auto;
 }
 .table_Outstanding_phone {
   margin-top: 20px;
-  width: 1145px;
+  width: 100%;
   height: auto;
   background-color: #eeeeee;
 }
@@ -82,6 +82,7 @@
   line-height: 30px;
   margin: 0px 0px 0px 35px;
 }
+
 .img_Promotion_children:hover .buy_now {
   display: flex;
 }
