--- a/src/commonest/Layout/default_Layout/header/style_header.scss
+++ b/src/commonest/Layout/default_Layout/header/style_header.scss
@@ -186,7 +186,7 @@ li {
   animation-name: example;
   animation-duration: 0.5s;
   background: white;
-  margin-top: -8px;
+  margin-top: 5px;
   border: solid 1px #d3d3d3;
   z-index: 200;
 }
@@ -202,7 +202,7 @@ li {
     top: 100px;
   }
   100% {
-    top: 5px;
+    top: 50px;
     top: 52x;
   }
 }
@@ -242,11 +242,25 @@ a {
 .ul_boxinfor li:hover {
   opacity: 0.2;
 }
+.Clear_search {
+  color: black;
+  font-size: 20px;
+  position: absolute;
+  right: 0px;
+  margin-right: 75px;
+  margin-top: 12px;
+  cursor: pointer;
+  opacity: 0.9;
+}
+.Clear_search:hover {
+  opacity: 0.7;
+}
 // tippy
 .result_search {
   min-width: 522px;
   height: 200px;
   // max-height: min((100vh - 96px)-60px, 734px);
+  overflow-y: scroll;
   background: #fff;
   margin-left: 10px;
   border-radius: 3px;
